<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_user_preferences"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#fafafa"
    tools:context="com.vitalityactive.va.userpreferences.FirstTimeUserPreferencesActivity">

    <include
        android:id="@+id/toolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"

        layout="@layout/toolbar"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/button_bar_layout"
        card_view:layoutManager="android.support.v7.widget.LinearLayoutManager"
        android:background="#ffffff">
    </android.support.v7.widget.RecyclerView>

    <LinearLayout
        android:id="@+id/button_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <include layout="@layout/button_bar" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/recycler_view"
        android:layout_marginTop="0dp"
        android:background="#fafafa"
        android:visibility="gone">

        <include layout="@layout/fragment_setting_change_password" />
    </LinearLayout>

</RelativeLayout>
