...
  <string name="help.empty_title_316">Suggestions</string>
  <string name="help.feedback_thanks_message_9999">Thank you for your feedback!</string>
  <string name="help.placeholder_message_263">Ask a Question</string>
  <string name="help.related_help_9999">Related help</string>
  <string name="help.solutions_title_9999">Solutions</string>
  <string name="help.was_this_helpful_9999">Was this helpful?</string>
  <string name="help_button_141">Help</string>
  <string name="help_button_title_141">Help</string>
  <string name="help_view_searchbar_placeholder_263">Ask a question</string>
  <string name="history.empty_state_message_251">Keep track of all Vitality Health Check submissions here.</string>
  <string name="history.empty_state_title_250">No History</string>
  <string name="history.submission_section_title_203">Submissions</string>
  <string name="history_button_140">History</string>
...
  <string name="learn_more.waist_cicumfernece_section_1_message_228">Waist measurement is a measure of the circumference or the body at the narrowest part of the torso above the navel and below the lowest portion of the ribs or chest bone.\n\nOptimal waist measurements are:\n	• 	Women: Less than 80 cm or 31.5 inches\n	• 	Men: Less than 90 cm or 35.4 inches. </string>
  <string name="learn_more.waist_cicumfernece_section_2_message_229">Excessive abdominal fat may be serious because it places you at greater risk for developing obesity-related conditions, such as type 2 diabetes, high blood pressure, and coronary artery disease. \n\nTo measure your waist circumference:\n	• 	Stand and remove any heavy outer clothing such as jackets, jumpers or sweaters. \n	• 	If t
  <string name="learn_more.waist_cicumfernece_section_3_message_230">Get a healthcare professional to measure your waist. Then submit the results to Vitality as part of your Vitality Health Check. \n\nYou earn 1 000 points for submitting your results, and an extra 1 000 if those results are in the healthy range. \n\nThese points are valid for each year’s membership only.</string>
  <string name="learn_more.waist_circumference_section_3_dynamic_message_230">Get a healthcare professional to measure your waist. Then submit the results to Vitality as part of your Vitality Health Check. \n\n  You earn %1$s points for submitting your results, and an extra %2$s if those results are in the healthy range.   \n\nThese points are valid for each year’s membership only.</string>
  <string name="learn_more.waist_circumferenece_section_3_title_219">How do I earn points for my Waist Circumference?</string>
  <string name="learn_more.waist_circumfernece_detail_section_1_title_212">What is Waist Circumference?</string>
  <string name="learn_more_button_title_104">Learn More</string>
  <string name="link_now_button_text_434">Link Now</string>
  <string name="login.account_locked_alert_title_737">Account Locked</string>
  <string name="login.account_locked_error_alert_message_738">Your account has been locked.</string>
  <!-- //////////////////////////////////////////////////// LOGIN SCREEN //////////////////////////////////////////////////// -->
  <string name="login.email_field_missing_224">Email field missing</string>
  <string name="login.email_not_registered_error_alert_button_340">Register</string>
...
