<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:paddingEnd="40dp"
    android:paddingStart="40dp"
    android:paddingTop="24dp">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleContentDescription="@string/password_visibility_toggle_content_description"
        app:passwordToggleDrawable="@drawable/password_visible_toggle_focused"
        app:passwordToggleEnabled="true">

        <TextView
            android:id="@+id/label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:textColor="@color/light_primary_38"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/field"
            style="@style/Widget.AppCompat.Spinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:drawablePadding="16dp"
            android:textSize="@dimen/onboarding_subtitle_text_size" />

        <include
            layout="@layout/horizontal_rule"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp" />

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
